[gd_scene load_steps=2 format=3 uid="uid://d5yqjqyqjqyqj"]

[ext_resource type="Script" path="res://scripts/ui/inventory_piece_widget.gd" id="1_abcde"]

[node name="InventoryPieceWidget" type="PanelContainer"]
custom_minimum_size = Vector2(100, 120)
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PieceImage" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="PieceName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nome da Pe√ßa"
horizontal_alignment = 1

[node name="PieceCount" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "x0"
horizontal_alignment = 1
